--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,7 +9,7 @@ day_night = true
 
 # Font style.
 #   Choose from `default`, `classic`, or `playfair`.
-font = "default"
+font = "classic"
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
 description = ""
@@ -61,7 +61,7 @@ privacy_pack = false
 gravatar = false
 
 # Contact Widget setup
-  email = "test@example.org"
+  email = "varun.rao@mavs.uta.edu"
   address = "815 W Abram St Apt 1106C Arlington TX 76013"
   # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
   office_hours = """"""
